--- a/src/blocks/popup/popup-edit-profile/__close-button/popup__close-button.css
+++ b/src/blocks/popup/popup-edit-profile/__close-button/popup__close-button.css
@@ -1,4 +1,5 @@
 @import url(../__close-button/_photo/popup__close-button_photo.css);
+@import url(../__close-button/_status/popup__close-button_status.css);
 
 .popup__close-button {
   width: 41px;
