--- a/src/blocks/popup/popup-status/__status-name/popup__status-name.css
+++ b/src/blocks/popup/popup-status/__status-name/popup__status-name.css
@@ -1,4 +1,13 @@
+.popup__status-name {
+    color: #000000;
+    text-align: center;
+    margin: 0 36px 60px;
+}
 
-.popup__status-name{
-color: #000000;
+@media (max-width: 480px) {
+
+    .popup__status-name {
+        margin: 0 18px 50px;
+    }
+
 }
